[gd_scene load_steps=9 format=3 uid="uid://ddk7lnfg0eape"]

[ext_resource type="Texture2D" uid="uid://ccr62mctad8j8" path="res://Media/HUD/barHorizontal_green.png" id="1"]
[ext_resource type="Texture2D" uid="uid://cc2hd18nu81gy" path="res://Media/HUD/barHorizontal_red.png" id="2"]
[ext_resource type="Script" path="res://Scripts/Unit/UnitHUD/BarHUD.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bsf06o2dmjk46" path="res://Media/HUD/circleBar_large_back.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://b8551l1eblfgn" path="res://Media/HUD/circleBar_large_front.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://d1sh4u7pgl5wv" path="res://Media/HUD/circleBar_small_back.svg" id="6"]
[ext_resource type="Texture2D" uid="uid://dbtjh4hnprsie" path="res://Media/HUD/circleBar_small_front.svg" id="7"]
[ext_resource type="Texture2D" uid="uid://4kop1u88va1t" path="res://Media/icons/generic_item.svg" id="8_yplct"]

[node name="BarHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("3")

[node name="HPBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = -49.0
offset_top = -31.0
offset_right = 151.0
offset_bottom = 9.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource("1")

[node name="HeatBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = -48.0
offset_top = 4.0
offset_right = 152.0
offset_bottom = 44.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource("2")

[node name="StructureBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = -131.0
offset_top = -40.0
offset_right = -51.0
offset_bottom = 40.0
mouse_filter = 2
max_value = 4.0
value = 4.0
fill_mode = 4
texture_under = ExtResource("4")
texture_progress = ExtResource("5")

[node name="StressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = -131.0
offset_top = -40.0
offset_right = -51.0
offset_bottom = 40.0
mouse_filter = 2
max_value = 4.0
value = 4.0
fill_mode = 4
texture_under = ExtResource("6")
texture_progress = ExtResource("7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -48.0
offset_top = -77.0
offset_right = 80.0
offset_bottom = -37.0

[node name="action1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_yplct")
expand_mode = 2
stretch_mode = 4

[node name="action2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_yplct")
expand_mode = 2
stretch_mode = 4

[node name="action3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_yplct")
expand_mode = 2
stretch_mode = 4
